add appcache manifest and task

--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html>
+<html manifest="demo.appcache">
     <head>
         <title>WebclipDemo</title>
         <meta name="viewport" content="width=device-width, maximum-scale=1, user-scalable=no" />
